crates/ruff_linter/src/comments/snapshots/ruff_linter__comments__shebang__tests__shebang_space_before_path.snap
---
source: crates/ruff_linter/src/comments/shebang.rs
expression: "ShebangDirective::try_extract(source)"
---
Some(
    ShebangDirective(
        " /usr/bin/env python",
    ),
)
